tests/paczka1/fuzzy1/26886875.err
Error in line 1: o0aIhjo4Gp S812 24,9
Error in line 17: wdqX S812 59,1
Error in line 20: wdqX A868 66,7
Error in line 31: S541 A532 71,0
Error in line 33: S541 S812 70,2
Error in line 34: S541 S541 40,4
